# voice-trunk

./: .gitignore  README-ja.md  README.md  bun.lockb  package.json  vite.config.ts  worker-entry.ts  wrangler.toml
desktop/: README-ja.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
desktop/src/: app.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: config.rs  error.rs  events.rs  lib.rs  main.rs  state.rs  tray.rs  volume_watcher.rs
desktop/src-tauri/src/commands/: api_client.rs  batches.rs  config.rs  converter.rs  hasher.rs  importer.rs  mod.rs  scanner.rs  uploader.rs  volumes.rs
desktop/src/lib/: stores.svelte.ts  tauri.ts  types.ts
desktop/src/routes/: +layout.svelte  +page.svelte
docs/: quickstart-ja.md  quickstart.md  setup-guide-ja.md  setup-guide.md
importer/: README-ja.md  README.md  bun.lockb  com.voice-trunk.importer.plist  package.json
importer/src/: api-client.ts  audio-converter.ts  audio-splitter.ts  config.ts  file-scanner.ts  hasher.ts  identifier.ts  inbox.ts  index.ts  mount-detector.ts  state.ts  uploader.ts
messages/: en.json  ja.json
migrations/: 0001_initial_schema.sql  0002_nullable_device_id.sql  0003_service_tokens.sql
src/: app.css  app.d.ts  hooks.server.ts
src/lib/: constants.ts
src/lib/api/: client.ts
src/lib/components/: AudioPlayer.svelte  ClaimsPanel.svelte  Pagination.svelte  (+3 more)
src/routes/: +layout.svelte  +page.svelte
src/worker/: index.ts  queue-consumer.ts
(+91 files in other folders)
